# azure-iot-c-sdk

barco_custom_hsm/: CMakeLists.txt  customhsmx509.cpp
barco_custom_hsm/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake/c-utility/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake/c-utility/azure_c_shared_utility/: azure_c_shared_utilityConfigVersion.cmake
cmake/iothub_client/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/iothub_client/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/provisioning_client/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/provisioning_client/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/provisioning_service_client/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/serializer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/umqtt/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libumqtt.so.1  libumqtt.so.1.1.12
iothub_client/src/: iothub_client_core_ll.c  iothub_client_ll_uploadtoblob.c
